--- a/style.css
+++ b/style.css
@@ -122,3 +122,59 @@ body {
     color: grey;
     margin-bottom: 30px;
 }
+
+.skills {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    padding: 50px 0;
+}
+
+.skills-list {
+    flex: 1;
+    padding-left: 100px;
+    padding-right: 70px;
+    max-width: calc(50%-170px);
+}
+
+.skills-image {
+    flex: 1;
+    text-align: center;
+    max-width: 50%;
+    max-height: auto;
+}
+
+.skill {
+    margin-bottom: 20px;
+}
+
+.skills h2 {
+    font-size: 1.8rem;
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
+    margin-bottom: 40px;
+}
+
+.skill  h3 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: .9rem;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.progress-bar {
+    background-color: rgba(128, 128, 128, 0.29);
+    height: 3px;
+    border-radius: 10px;
+    margin-bottom: 50px;
+
+}
+
+.progress {
+    padding: 2px 0;
+    text-align: center;
+    background-color: #10c9c3;
+    color: rgb(0, 0, 0);
+}
