--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ body {
 }
 
 .skills h2 {
-    font-size: 1.8rem;
+    font-size: 2rem;
     font-weight: 600;
     font-family: 'Montserrat', sans-serif;
     margin-bottom: 40px;
@@ -217,6 +217,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-size: 0.9rem;
     margin-top: -10px;
+    font-weight: 200;
 
 }
 
@@ -261,8 +262,8 @@ body {
     text-align: center;
 }
 
-.process-content h1 {
-    font-size: 2.5rem;
+.process-content h2 {
+    font-size: 2rem;
     font-weight: 400;
     margin-bottom: 20px;
     font-family: 'Montserrat', sans-serif;
@@ -283,4 +284,38 @@ body {
 .process-img img {
     max-width: 85%;
     height: auto;
+}
+
+.services {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 100px 0;
+    background-color: #f5f5f5;
+    padding-left: 80px;
+    padding-right: 80px;
+}
+
+.service-item {
+    width: 23%;
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+.service-item img {
+    width: 60px;
+    height: auto;
+}
+
+.service-item h3 {
+    font-size: .9rem;
+    margin: 10px 0;
+    font-weight: 700;
+}
+
+.service-item p {
+    color: rgba(128, 128, 128, 0.79);
+    font-size: 1.1rem;
+    line-height: 1.5;
+    font-weight: 600;
 }
