--- a/style.css
+++ b/style.css
@@ -5,6 +5,32 @@ body {
     font-family: "Nunito Sans", sans-serif;
     font-weight: 400;
     font-size: 1rem;
+    color: grey;
+    font-size: 18px;
+}
+
+h1, h2, h3 {
+    color:rgba(0, 0, 0, 0.812);
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+}
+
+h1 {
+    font-size: 2.5rem;
+}
+
+h2 {
+    font-size: 1.8rem;
+}
+
+h3 {
+    font-size: 1.5rem;
+}
+
+p {
+    color: grey;
+    margin-bottom: 30px;
 }
 
 .home {
@@ -56,7 +82,6 @@ body {
     color: #10c9c3; 
 }
 
-
 .bg-image {
     position: absolute;
     top: 0;
@@ -68,8 +93,6 @@ body {
     z-index: -1;
 }
 
-
-
 .content {
     position: absolute;
     top: 50%;
@@ -80,29 +103,22 @@ body {
     z-index: 1;
 }
 
-.content h1 {
-    color:rgba(0, 0, 0, 0.812);
-    margin: 0;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
-    font-size: 2.5rem;
-}
-
 .content p {
-    font-size: 18px;
-    color: grey;
+    font-size: 1.3rem;
 }
 
 .btn {
-    font-family: 'Montserrat', sans-serif;
     font-size: .8rem;
+    font-weight: 700;
+    letter-spacing: 1px;
     display: inline-block;
     margin-top: 20px;
-    padding: 10px 20px;
+    padding: 20px 50px;
     background-color: #10c9c3;
     text-decoration: none;
     border-radius: 5px;
     color: white; 
+    border: none;
 }
 
 .about {
@@ -111,23 +127,15 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 50px;
 }
 
-.about h2 {
-    font-size: 1.8rem;
-    font-family: 'Montserrat', sans-serif;
-}
-
-.about p {
-    color: grey;
-    margin-bottom: 30px;
-}
 
 .skills {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: white;
+    background-color: #f5f5f5;
     padding-top: 50px;
 }
 
@@ -151,17 +159,13 @@ body {
 
 .skills h2 {
     font-size: 2rem;
-    font-weight: 600;
-    font-family: 'Montserrat', sans-serif;
     margin-bottom: 40px;
 }
 
 .skill  h3 {
-    font-family: 'Montserrat', sans-serif;
     font-size: .9rem;
     margin-bottom: 20px;
     text-transform: uppercase;
-    font-weight: bold;
 }
 
 .progress-bar {
@@ -213,11 +217,20 @@ body {
     margin-top: -15px;
 }
 
+.portfolio-content h3 {
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 1.3rem;
+    color: white;
+    font-weight: 500;
+    margin-top: 40px;
+}
+
 .portfolio-content p {
-    font-family: 'Montserrat', sans-serif;
     font-size: 0.9rem;
-    margin-top: -10px;
-    font-weight: 200;
+    font-weight: 500;
+    color: white;
+    margin-top: 5px;
+    letter-spacing: 1px;
 
 }
 
@@ -290,7 +303,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 100px 0;
+    padding-top: 100px;
+    padding-bottom: 30px;
     background-color: #f5f5f5;
     padding-left: 80px;
     padding-right: 80px;
@@ -318,4 +332,81 @@ body {
     font-size: 1.1rem;
     line-height: 1.5;
     font-weight: 600;
+}
+
+.testimonials {
+    padding: 160px 0;
+    text-align: center;
+    position: relative;
+    background-color: #10c9c3;
+    color: white;
+}
+
+.testimonials p {
+    font-size: 1.8rem;
+    line-height: 1.5;
+    font-weight: 600;
+    color: white;
+}
+
+.testimonials h2 {
+    font-family: "Nunito Sans", sans-serif;
+    font-size: .8rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+}
+
+.contact {
+    text-align: center;
+    padding: 100px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f5f5f5;
+}
+
+.contact-form {
+    width: 48%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-row {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.contact-form .form-control {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 40px;
+    border: 1px solid #f5f5f5;
+    box-sizing: border-box;
+    height: 50px;
+}
+
+.form-row .form-control {
+    width: 47%;
+}
+.contact-form textarea.form-control {
+    height: 150px;
+}
+
+input::placeholder, textarea::placeholder {
+    color: rgba(128, 128, 128, 0.926);
+    font-weight: 500;
+    font-size: 1.1rem;
+}
+
+.contact h2 {
+    font-size: 2rem;
+    padding-bottom: 20px;
+}
+.contact .btn {
+    padding: 20px 40px;
+    border-radius: 0px;
 }
