--- a/style.css
+++ b/style.css
@@ -69,11 +69,12 @@ p {
 }
 
 .navbar ul li a {
+    font-family: "Montserrat", sans-serif;
     margin: 0 10px;
-    font-weight: 1000;
+    font-weight: bold;
     text-decoration: none;
     color: black; 
-    font-size: .8rem;
+    font-size: .9rem;
     letter-spacing: .07em;
     text-transform: uppercase;
 }
@@ -95,7 +96,7 @@ p {
 
 .content {
     position: absolute;
-    top: 50%;
+    top: 42%;
     left: 55%; 
     transform: translateY(-50%);
     text-align: left; 
@@ -112,7 +113,7 @@ p {
     font-weight: 700;
     letter-spacing: 1px;
     display: inline-block;
-    margin-top: 20px;
+    margin-top: -20px;
     padding: 20px 50px;
     background-color: #10c9c3;
     text-decoration: none;
@@ -137,19 +138,20 @@ p {
     align-items: center;
     background-color: #f5f5f5;
     padding-top: 50px;
+    overflow-x: hidden;
 }
 
 .skills-list {
     flex: 1;
-    padding-left: 100px;
-    padding-right: 70px;
+    padding-left: 80px;
+    padding-right: 30px;
     max-width: calc(50%-170px);
 }
 
 .skills-image {
     flex: 1;
     text-align: center;
-    max-width: 50%;
+    max-width: 70%;
     max-height: auto;
 }
 
@@ -409,4 +411,46 @@ input::placeholder, textarea::placeholder {
 .contact .btn {
     padding: 20px 40px;
     border-radius: 0px;
+}
+
+footer {
+    background-color: rgba(0, 0, 0, 0.947);
+    padding: 90px 0;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 100px;
+    font-size: 1rem;
+    color: rgb(167, 165, 165);
+    font-weight: 600;
+}
+
+.footer-container ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.footer-container ul li {
+    margin-bottom: 10px;
+}
+
+.footer-container a {
+    text-decoration: none;
+    color: rgb(167, 165, 165);
+    font-weight: 600;
+}
+
+.footer-container h3 {
+    color: white;
+    font-size: 1.2rem;
+}
+
+.col5 {
+    padding-right: 30px;
+}
+.col2 {
+    padding-left: 120px; 
+    padding-right: 150px;
 }
